--- a/assets/styles/_variable.scss
+++ b/assets/styles/_variable.scss
@@ -8,7 +8,7 @@
     src: url(../fonts/MobileFontsnum/IRANSansMobile\(FaNum\).ttf);
 }
 
-$font1 : Irsans , Irsansmobile;
+$font : Irsans, Irsansmobile, ;
 
 $bg-color1 : #34E89E;
 $bg-color2 : #0F3443;
