--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=footer.css.map */
+@font-face {
+  font-family: Irsans;
+  src: url("../fonts/IRANSansWeb/IRANSansWeb(FaNum).woff");
+}
+
+@font-face {
+  font-family: Irsansmobile;
+  src: url("../fonts/MobileFontsnum/IRANSansMobile(FaNum).ttf");
+}
+/*# sourceMappingURL=footer.css.map */
