--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -1,19 +1,63 @@
 @import 'variable';
-
-header 
-{
-    nav {
-        input {
-            display: none;
+.topHeader {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(-50deg, $bg-color1, $bg-color2);
+    text-align: center;
+    box-shadow: 0px 3px 6px 1px rgba(0,0,0,.4);
+    z-index:20;
+    .holder {
+        width: 1280px;
+        margin: 0 auto;
+        nav {
+            float: right;
+            width: 800px;
+            height: 80px;
+            overflow: hidden;
+            position: relative;
+            input {
+                display: none;
+            }
+            .icon {
+                display: none;
+            }
+            .menu {
+                position: absolute;
+                top: 50%;
+                left: 0;
+                right: 0;
+                transform: translateY(-50%);
+                .item {
+                    color:#FFF;
+                    float: right;
+                    padding: 5px 20px;
+                    margin:0 5px;
+                    border-bottom: 0px solid $bg-color1;
+                    transition:.6s;
+                    font-family: $font;
+                    cursor: pointer;
+                    &:not(.sel):hover {
+                        border-bottom: 1px solid #FFF;
+                        transition:.5s;
+                    }
+                }
+                .sel{
+                    border-bottom: 2px solid #FFF;
+                }
+            }
         }
         .icon {
-            display: none;
+            float: left;
+            width:300px;
+            line-height: 80px;
+            color:rgb(92,167,80);
+            font-size:30px;
+            height: 80px;
+            background: url("../img/icon/Untitled-10.png" ) no-repeat 0 50%;
+            background-size: 110px;
+            font-family: "Comic Sans MS";
         }
-    }
-    .menu {
-        color:#FFF;
-        font-family: $font;
-
     }
 }
 
