--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -33,7 +33,7 @@
                     float: right;
                     padding: 5px 20px;
                     margin:0 5px;
-                    border-bottom: 0px solid $bg-color1;
+                    border-bottom: 0px solid rgba(255,255,255,0);
                     transition:.6s;
                     font-family: $font;
                     cursor: pointer;
