--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -14,6 +14,7 @@
             float: right;
             width: 800px;
             height: 80px;
+            margin-right:25px ;
             overflow: hidden;
             position: relative;
             input {
@@ -51,6 +52,7 @@
             float: left;
             width:300px;
             line-height: 80px;
+            margin-left:25px ;
             color:rgb(92,167,80);
             font-size:30px;
             height: 80px;
@@ -60,6 +62,50 @@
         }
     }
 }
+.box1 {
+    width: 100%;
+    height: auto;
+    background: url("../img/iphonex.png") no-repeat 50% 150px, linear-gradient(-50deg, $bg-color1, $bg-color2);
+    background-size:400px,100% ;
+    text-align: center;
+    .holder{
+        position: relative;
+        width: 1280px;
+        height: 500px;
+        margin: 0 auto;
+        .appBox {
+            position: absolute;
+            top:20px;
+            left:30px;
+            padding: 0 20px;
+            display: inline-block;
+            border-radius: 25px;
+            line-height: 50px;
+            color:$txtColorOnBg;
+            background: rgba(255,255,255,.2);
+            box-shadow: 0px 3px 4px 1px rgba(0,0,0,.4);
+            text-decoration: none;
+            font-family: $font;
+            transition: .1s;
+            &:hover {
+                background: rgba(255,255,255,.3);
+                top:23px;
+                box-shadow: none;
+                transition: .2s;
+            }
+        }
+        .slogan {
+            font-family: $font;
+            font-size: 50px;
+            color: $txtColorOnBg;
+            position: relative;
+            top:100px;
+
+        }
+    }
+    
+}
+
 
 @media  only screen and (min-width: 1280px) {
 
