--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -62,6 +62,7 @@
         }
     }
 }
+
 .box1 {
     width: 100%;
     height: auto;
@@ -104,6 +105,19 @@
         }
     }
     
+}
+
+.description {
+    height: 600px;
+    width:1280px;
+    margin: 0 auto;
+    background: olive;
+    article{
+
+    }
+    .mobile {
+        
+    }
 }
 
 
