--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -8,6 +8,10 @@
   src: url("../fonts/MobileFontsnum/IRANSansMobile(FaNum).ttf");
 }
 
+body {
+  direction: rtl;
+}
+
 .topHeader {
   position: relative;
   width: 100%;
@@ -139,6 +143,44 @@
   height: 600px;
   width: 1280px;
   margin: 0 auto;
-  background: olive;
+}
+
+.description article {
+  float: right;
+  width: 810px;
+  padding: 70px 40px;
+}
+
+.description article header {
+  font-family: Irsans;
+  font-size: 35px;
+  padding: 50px 0;
+  color: #000;
+}
+
+.description article p {
+  font-family: Irsans;
+  font-size: 25px;
+  line-height: 40px;
+  padding: 40px 0;
+  color: #666;
+}
+
+.description .mobileScreen {
+  height: 100%;
+  float: left;
+  width: 30%;
+}
+
+.description .mobileScreen .mobile {
+  width: 100%;
+  height: 100%;
+  background: url("../img/iphonex.png") no-repeat 50% 50%;
+  background-size: 300px;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 /*# sourceMappingURL=header.css.map */
