--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -167,6 +167,49 @@ body{
     }
 }
 
+.points {
+    overflow: hidden;
+
+    .holder {
+
+        width: 1240px;
+        padding: 30px 20px;
+        margin: 0 auto;
+        text-align: center;
+        .item {
+            display: inline-block;
+            background: red;
+            margin: 20px ;
+            width: 260px;
+            height: 390px;
+            .pic {
+                background: #FFF;
+                box-shadow: 0px 3px 8px 1px rgba(0,0,0,.5);
+                display: inline-block;
+                margin: 20px;
+                height: 200px;
+                width: 200px;
+            }
+
+            .title {
+                font-family: $font;
+                color:#3F5EAB;
+                padding-bottom: 20px;
+                font-size: 25px;
+            }
+
+            p{
+                
+                display: inline-block;
+                height: 80px;
+                font-family: $font;
+                color:$txtColor2;
+                padding-bottom: 15px;
+                font-size: 18px;
+            }
+        }
+    }
+}
 
 @media  only screen and (min-width: 1280px) {
 
