--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -7,4 +7,181 @@
   font-family: Irsansmobile;
   src: url("../fonts/MobileFontsnum/IRANSansMobile(FaNum).ttf");
 }
+
+.box1 {
+  width: 100%;
+  height: auto;
+  background: url("../img/iphonex.png") no-repeat 50% 150px, linear-gradient(-50deg, #34E89E, #0F3443);
+  background-size: 400px,100%;
+  text-align: center;
+}
+
+.box1 .holder {
+  position: relative;
+  width: 1280px;
+  height: 500px;
+  margin: 0 auto;
+}
+
+.box1 .holder .appBox {
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  padding: 0 20px;
+  display: inline-block;
+  border-radius: 25px;
+  line-height: 50px;
+  color: #FFF;
+  background: rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: 0px 3px 4px 1px rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 3px 4px 1px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  font-family: Irsans;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+
+.box1 .holder .appBox:hover {
+  background: rgba(255, 255, 255, 0.3);
+  top: 23px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.box1 .holder .slogan {
+  font-family: Irsans;
+  font-size: 50px;
+  color: #FFF;
+  position: relative;
+  top: 100px;
+}
+
+.description {
+  height: 600px;
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.description article {
+  float: right;
+  width: 810px;
+  padding: 70px 40px;
+}
+
+.description article header {
+  font-family: Irsans;
+  font-size: 35px;
+  padding: 50px 0;
+  color: #000;
+}
+
+.description article p {
+  font-family: Irsans;
+  font-size: 25px;
+  line-height: 40px;
+  padding: 40px 0;
+  color: #666;
+}
+
+.description .mobileScreen {
+  height: 100%;
+  float: left;
+  width: 30%;
+}
+
+.description .mobileScreen .mobile {
+  width: 100%;
+  height: 100%;
+  background: url("../img/iphonex.png") no-repeat 50% 50%;
+  background-size: 300px;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.suggestion {
+  background: linear-gradient(-50deg, #0F3443, #34E89E);
+  height: 70px;
+}
+
+.suggestion p {
+  line-height: 70px;
+  text-align: center;
+  color: #FFF;
+  width: 1280px;
+  margin: 0 auto;
+  font-family: Irsans;
+  font-size: 20px;
+}
+
+.points {
+  overflow: hidden;
+}
+
+.points .holder {
+  overflow: hidden;
+  width: 1240px;
+  padding: 30px 20px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.points .holder .item {
+  float: right;
+  margin: 20px;
+  width: 270px;
+  height: 390px;
+}
+
+.points .holder .item .pic {
+  background: #FFF;
+  -webkit-box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 100px;
+  display: inline-block;
+  margin: 20px;
+  height: 200px;
+  width: 200px;
+}
+
+.points .holder .item .title {
+  font-family: Irsans;
+  color: #3F5EAB;
+  padding-bottom: 20px;
+  font-size: 25px;
+}
+
+.points .holder .item p {
+  display: inline-block;
+  height: 80px;
+  font-family: Irsans;
+  color: #666;
+  line-height: 25px;
+  padding-bottom: 15px;
+  font-size: 18px;
+}
+
+.points .holder .it1 .pic {
+  background: url("../img/fingerPrint/fingerPrint2.png") no-repeat 50% 50%;
+  background-size: 160px;
+}
+
+.points .holder .it2 .pic {
+  background: url("../img/speed/speed.png") no-repeat 50% 50%;
+  background-size: 140px;
+}
+
+.points .holder .it3 .pic {
+  background: url("../img/rahat/asan.png") no-repeat 65% 40%;
+  background-size: 120px;
+}
+
+.points .holder .it4 .pic {
+  background: url("../img/behine sazi/behine sazi.png") no-repeat 45% 50%;
+  background-size: 130px;
+}
 /*# sourceMappingURL=content.css.map */
