--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -67,10 +67,45 @@ body{
 }
 
 @media  only screen and (min-width: 1280px) {
-
+    
 }
 @media  only screen and (max-width: 1280px) {
+    .topHeader {
+        height: 70px;
 
+        .holder {
+            width: 960px;
+
+            nav {
+                width: 600px;
+                height: 70px;
+                margin-right:25px ;
+                .menu {
+                    .item {
+                        padding: 5px 15px;
+                        margin:0 5px;
+                    }
+                }
+            }
+
+            .icon {
+                width:250px;
+                line-height: 70px;
+                margin-left:15px ;
+                font-size:25px;
+                height: 70px;
+                background-size: 90px;
+            }
+        }
+
+        
+
+        
+
+        
+    }
+
+    
 }
 @media  only screen and (max-width: 960px) {
 
