--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -110,3 +110,33 @@ footer {
         line-height: 50px;
     }
 }
+
+@media only screen and (min-width: 1280px) {}
+
+@media only screen and (max-width: 1280px) {
+    footer {
+        .holder {
+            width: 960px;
+    
+            .right{
+                width: 380px;
+    
+            }
+    
+            .left{
+
+                width: 390px; 
+            }
+        }
+    
+        & > p {
+            line-height: 40px;
+        }
+    }
+}
+
+@media only screen and (max-width: 960px) {}
+
+@media only screen and (max-width: 767px) {}
+
+@media only screen and (max-width: 480px) {}
