--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -127,4 +127,77 @@ footer > p {
     line-height: 40px;
   }
 }
+
+@media only screen and (max-width: 960px) {
+  footer {
+    margin-top: 20px;
+    padding-top: 40px;
+  }
+  footer .holder {
+    width: 767px;
+  }
+  footer .holder .right {
+    width: 280px;
+    height: 40px;
+    padding: 50px;
+  }
+  footer .holder .right header {
+    font-size: 15px;
+    margin: 0 5px;
+  }
+  footer .holder .right .item {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    margin: 15px 3px;
+  }
+  footer .holder .right .item .telegram {
+    background: url("../img/telegram/telegram.png") no-repeat 50% 50%;
+    background-size: 60px;
+  }
+  footer .holder .right .item .instagram {
+    background: url("../img/instagram/intagram.png") no-repeat 50% 50%;
+    background-size: 45px;
+  }
+  footer .holder .right .item .twitter {
+    background: url("../img/twitter/twitter2.png") no-repeat 50% 50%;
+    background-size: 45px;
+  }
+  footer .holder .left {
+    width: 330px;
+    height: 100px;
+    padding: 20px;
+    float: left;
+  }
+  footer .holder .left .item {
+    margin: 20px 0px;
+    height: 30px;
+    line-height: 30px;
+  }
+  footer .holder .left .item span {
+    float: right;
+    padding: 0 2px;
+    height: 30px;
+    color: #FFF;
+    font-size: 13px;
+  }
+  footer .holder .left .item .icon {
+    float: right;
+    height: 30px;
+    width: 30px;
+    padding: 0 10px;
+  }
+  footer .holder .left .item .tel {
+    background: url("../img/phone/3.png") no-repeat 50% 50%;
+    background-size: 30px;
+  }
+  footer .holder .left .item .email {
+    background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
+    background-size: 45px;
+  }
+  footer > p {
+    padding: 0 15px;
+    line-height: 30px;
+  }
+}
 /*# sourceMappingURL=footer.css.map */
